--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/normolize.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <script src="js/index.js"></script>
     <title>15 Puzzle</title>
 </head>
 <body>
