--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <main>
         <div class="container">
+            <div class="top-buttons"></div>
             <div class="puzzle-game"></div>
         </div>
     </main>
