--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <title>15 Puzzle</title>
 </head>
 <body>
+    <div class="wrapper"></div>
     <main>
         <div class="container">
-            <div class="top-buttons"></div>
+            <div class="puzzle-game__top">
+                <div class="top-buttons"></div>
+                <button class="settings-button"></button>
+            </div>
             <div class="puzzle-game"></div>
         </div>
     </main>
