feat: add leaderboards

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="wrapper"></div>
     <main>
         <div class="container">
+            <div class="puzzle-game__heading"></div>
             <div class="puzzle-game__top">
                 <div class="top-buttons"></div>
                 <button class="settings-button"></button>
