--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/normolize.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="assets/img/fav.svg"/>
     <script defer src="./JS/index.js"></script>
     <title>15 Puzzle</title>
 </head>
